--- a/scibib.bib
+++ b/scibib.bib
@@ -5,7 +5,32 @@
 % set up your BibTeX file.
 
 
+@ARTICLE{2010arXiv1001.2010W,
+   author = {{Winn}, J.~N.},
+    title = "{Transits and Occultations}",
+  journal = {ArXiv e-prints},
+archivePrefix = "arXiv",
+   eprint = {1001.2010},
+ primaryClass = "astro-ph.EP",
+ keywords = {Astrophysics - Earth and Planetary Astrophysics},
+     year = 2010,
+    month = jan,
+   adsurl = {http://adsabs.harvard.edu/abs/2010arXiv1001.2010W},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
 
+@INBOOK{2013pss3.book..489W,
+   author = {{Wright}, J.~T. and {Gaudi}, B.~S.},
+    title = "{Exoplanet Detection Methods}",
+ keywords = {Physics},
+booktitle = {Planets, Stars and Stellar Systems.~Volume 3: Solar and Stellar Planetary Systems},
+     year = 2013,
+   editor = {{Oswalt}, T.~D. and {French}, L.~M. and {Kalas}, P.},
+    pages = {489},
+      doi = {10.1007/978-94-007-5606-9_10},
+   adsurl = {http://adsabs.harvard.edu/abs/2013pss3.book..489W},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
 
 @misc{tth, note = "The package is TTH, available at
 http://hutchinson.belmont.ma.us/tth/ ."}
