duration of transit

--- a/scibib.bib
+++ b/scibib.bib
@@ -32,6 +32,25 @@ booktitle = {Planets, Stars and Stellar Systems.~Volume 3: Solar and Stellar Pla
   adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
+@ARTICLE{2014A&A...563A..41M,
+   author = {{Murgas}, F. and {Pall{\'e}}, E. and {Zapatero Osorio}, M.~R. and 
+	{Nortmann}, L. and {Hoyer}, S. and {Cabrera-Lavers}, A.},
+    title = "{The GTC exoplanet transit spectroscopy survey . I. OSIRIS transmission spectroscopy of the short period planet WASP-43b}",
+  journal = {\aap},
+archivePrefix = "arXiv",
+   eprint = {1401.3692},
+ primaryClass = "astro-ph.EP",
+ keywords = {planets and satellites: atmospheres, planets and satellites: gaseous planets, techniques: spectroscopic},
+     year = 2014,
+    month = mar,
+   volume = 563,
+      eid = {A41},
+    pages = {A41},
+      doi = {10.1051/0004-6361/201322374},
+   adsurl = {http://adsabs.harvard.edu/abs/2014A%26A...563A..41M},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
 @misc{tth, note = "The package is TTH, available at
 http://hutchinson.belmont.ma.us/tth/ ."}
 
