--- a/scifile.tex
+++ b/scifile.tex
@@ -176,6 +176,8 @@ While at this stage, the science behind them is the research of exoplanets, of w
 
 The most popular detection methods are transit and radial velocity, while other methods like direct imaging, microlensing and astrometry etc are less used.
 
+\subsubsection*{Transit}
+
 Transit is used by Kepler satellite, on which the satellite detect the period changing of light curve of stars. A planet moving to the line of sight the star could dimmer the star light coming to us. One good aspect about this eclipse method is that we can also collect the spectrum of planet atmosphere thus inferring the composition of it.
 
 The detection take the advantage of two events, transition and occulation. The question is that in what situation we could detect such an event.
@@ -185,9 +187,10 @@ The detection take the advantage of two events, transition and occulation. The q
 \centering
 \includegraphics[width=\textwidth]{./assets/transit}
 \caption{The idea of transit. Image taken from \cite{2010arXiv1001.2010W}.}
-\label{fig:variety-exo}
+\label{fig:transit}
 \end{figure}
 
+Planets orbiting stars on Keplerian orbit, which is described by elliptical function. However observed by the observer, the orbit is in three dimensions, requiring two extra parameters to describe the orbital motion, inclination and ascending node. 
 
 The shadow band \cite{2010arXiv1001.2010W} is the penumbra casted by the planet. To describe this band it requires a frame where the star is stationary and the penumbra of the moving planet draws the shadow band. If the observor can fall inside the umbra of the planet, the transit signal would be stronger.
 
@@ -195,10 +198,57 @@ The shadow band \cite{2010arXiv1001.2010W} is the penumbra casted by the planet.
 \centering
 \includegraphics[width=\textwidth]{./assets/shadowband}
 \caption{Shadow band of the system. Image taken from \cite{2010arXiv1001.2010W}.}
-\label{fig:variety-exo}
+\label{fig:shadowband}
 \end{figure}
 
+Assuming the inclination angle is uniformly distributed, the shadow band fraction gives us the probability of observed transit by a fixed observer.\cite{2010arXiv1001.2010W}
 
+\begin{equation}
+P_{tra} = \left( \frac{R_* + R_p }{a} \right) \left( \frac{1 + e \sin \omega}{1 - e^2} \right) ,
+\end{equation}
+
+in which $e$ is the eccentricity, $R_*$ is the radius of the star, $R_p$ is the radius of the planet, $a$ is the semimajor axis, $\omega$ is the angle between periapse and ascending node.
+
+The shadow band of antumbra can also be calculated using 
+
+\begin{equation}
+P_{tra,antumbra} = \left( \frac{R_* - R_p }{a} \right) \left( \frac{1 + e \sin \omega}{1 - e^2} \right) .
+\end{equation}
+
+In the observation, transition duration can be used to reconstruct the system. The edge of the planetary disk contacts the stellar disk four times, the first time is when the two disks touch each other, as the planetary disk moves inside the stellar disk, another tangent happens, then the two inverse process happen when the planetary disk moves out of the stellar disk. The four contacts are denoted as $t_1$, $t_2$, $t_3$ and $t_4$ respectively. An example of transit is shown in figure \ref{fig:wasp43btransit}.
+
+\begin{figure}
+\centering
+\includegraphics[width=\textwidth]{./assets/wasp43btransit}
+\caption{An example of transit. The black dots are the transit data of WASP-43b while the red line is the best fit using MCMC.\cite{2014A&A...563A..41M}}
+\label{fig:wasp43btransit}
+\end{figure}
+
+The flux of the system starts to drop at time $t_1$ and restores at time $t_4$. The duration is the difference of the two points,
+
+\begin{equation}
+T_t=t_4 - t_1 .
+\end{equation}
+
+
+However, there are features in the transit. The flux doesn't drop immediately but drops with some different stages. Thus the other three time scales are defined.
+
+\begin{equation}
+\begin{align}
+T_f &= t_3 - t_2, \qquad &\text{full duration} \\
+T_i &= t_2-t_1, \qquad &\text{ingress duration} \\
+T_e &= t_4 - t_3, \qquad &\text{egress duration} .
+\end{align}
+\end{equation}
+
+
+
+
+
+
+
+
+\subsubsection*{Radial Velocity}
 
 Radial velocity helped us to identify the first exoplanet. The method take advantage of the spectrum shift of the host star due to the movement of it. The amplitude of the velocity $k$ determines the shift of the spectrum.
 
@@ -209,7 +259,6 @@ The description of a orbital motion requires five parameters, period $P$, mass o
 \end{equation}
 
 where $G$ is Newton's constant. The right hand side of the equation is defined as mass function of the system.\cite{2013pss3.book..489W}
-
 
 Period $P$ and amplitude $K$ is what we observe from spectrum, while stellar mass is usually calculated from stellar models. Using these the lower limit of planet mass is determined, which is actually $M_p\sin i$.
 
